[package]
name = "cirrus-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["hashbased-keyword-search"]
hashbased-keyword-search=[]

[dependencies]
tokio = { version = "1", features = ["full","tracing"] }
openssl = { version = "0.10", features = ["vendored"] }
pqcrypto = "0.14.2"
async-std = "1.10.0"
rkyv ={version= "0.7.26",features=["validation"]}
bytecheck = "0.6.7"
tracing = "0.1.29"
tracing-futures = "0.2.5"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls","mysql","any"] }
rocksdb = "0.17.0"
uuid = {version="0.8.2",features=["v4"]}
anyhow = "1.0.55"
cocoon-core={path="../cocoon-core"}
quisyn={path="../quisyn"}


#async-task = "4.1.0"
#once_cell = "1.9.0"
#flume = "0.10.*"

[dev-dependencies]
tracing-subscriber = "0.3.4"
serial_test = "*"
