[package]
name = "cocoon-virtual"
version = "0.1.0"
edition = "2021"
license= "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dht-simulator"
path = "src/dht-simulator.rs"

[[bin]]
name = "network-simulation"
path = "src/network-simulation.rs"

[dependencies]
cocoon-core={path="../cocoon-core",features=["dht-dev"]} # use dht dev features
anyhow = "1.0.55"
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1.29"
tokio = { version = "1", features = ["full","tracing"] }
tracing-subscriber = "0.3.4"
hex = "0.4.3"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1", features = ["full","tracing"] }