[package]
name = "quisyn"
version = "0.1.0"
edition = "2021"
license= "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
uuid = {version="0.8.2",features = ["v4"]}

[dev-dependencies]
#serde = {version="1.0.136",features=["derive"]}
rkyv = "0.7.33"
